# lxqt-config-randr

./: AUTHORS  CMakeLists.txt  README.md  lxqt-config-randr.desktop  razorxrandr.desktop
src/: CMakeLists.txt  collapsiblewidget.cpp  collapsiblewidget.h  layoutmanager.cpp  layoutmanager.h  legacyrandrscreen.cpp  legacyrandrscreen.h  loaderconfiglogin.cpp  loaderconfiglogin.h  lxqtconfigrandr.qrc  main.cpp  outputconfig.cpp  outputconfig.h  outputgraphicsitem.cpp  outputgraphicsitem.h  qtimerconfirmdialog.cpp  qtimerconfirmdialog.h  randr.cpp  randr.h  randrconfig.cpp  randrconfig.h  randrcrtc.cpp  randrcrtc.h  randrdisplay.cpp  randrdisplay.h  randrgammainfo.cpp  randrgammainfo.h  randrmode.cpp  randrmode.h  randroutput.cpp  randroutput.h  randrscreen.cpp  randrscreen.h  razorrandrconfiguration.cpp  razorrandrconfiguration.h  razorrandrdialog.cpp  razorrandrdialog.h
src/forms/: outputconfigbase.ui  qtimerconfirmdialog.ui  randrconfigbase.ui  razorrandrconfiguration.ui
src/icons/: .directory
